# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.46 2004/05/02 10:20:27 tester Exp $

  02 May 2004; Olivier Crete <tester@gentoo.org>
  arch/x86.py:
  Added forgotten CHOST for i386 subarch

  30 Apr 2004; John Davis <zhen@gentoo.org>
  livecd/cdtar/isolinux-2.08-cdtar.tar.bz2,
  livecd/cdtar/isolinux-2.08-memtest86+-cdtar.tar.bz2,
  livecd/cdtar/isolinux-2.08-memtest86-cdtar.tar.bz2,
  livecd/files/x86-help.msg, livecd/runscript/x86-archscript.sh:
  lots of changes
  -fixed 2004.0 branding in the isolinux cdtar
  -fixed up acpi stuff in the runscripts
  -fixed up the x86 help message and corrected the numerous errors in it

  26 Apr 2004; John Davis <zhen@gentoo.org> catalyst,
  livecd/runscript/default-runscript.sh:
  fixed the /etc/issue /O macro issue, and changed the version in catalyst to
  1.0.7. we are ready for release

  16 Apr 2004; John Davis <zhen@gentoo.org> targets/stage1/stage1-chroot.sh:
  fix for the problem that gustavoz found wrt the /dev creation stuff not
  detecting arches. also an efficiency fix for stage1 building

  14 Apr 2004; John Davis <zhen@gentoo.org>
  targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-preclean-chroot.sh, targets/embedded/embedded.sh,
  targets/grp/grp.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1.sh, targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-preclean1-chroot.sh, targets/stage1/stage1.sh,
  targets/stage2/stage2-chroot.sh, targets/stage2/stage2-preclean-chroot.sh,
  targets/stage2/stage2.sh, targets/stage3/stage3-chroot.sh,
  targets/stage3/stage3.sh, targets/tinderbox/tinderbox-chroot.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh,
  targets/tinderbox/tinderbox.sh:
  fix for bug #47733 - fixes for distcc and an envscript bugfix
